--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "15.4.2",
     "react-native": "0.41.2",
+    "react-native-code-push": "^1.17.0-beta",
     "react-native-segmented-control-tab": "^2.0.1",
     "react-native-vector-icons": "^4.0.0"
   },
@@ -16,7 +17,7 @@
     "babel-jest": "18.0.0",
     "babel-preset-react-native": "1.9.1",
     "jest": "18.1.0",
-    "react-test-renderer": "15.4.2",
+    "react-test-renderer": "15.4.2"
   },
   "jest": {
     "preset": "react-native"
